# haproxy-manager

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: index.html
