[package]
name = "haproxy-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tower-http = { version = "0.6", features = ["auth", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
